react state update & es6 entry

--- a/master.scss
+++ b/master.scss
@@ -10,64 +10,70 @@ sass --watch master.scss:master.css
 
 $baseline: 1vw; // $baseline:
 $title-font: 40px Tahoma, Helvetica, Arial, Sans-Serif;
-$fonts: ( Comfort: ('Comfortaa', cursive), Cabin: ('Cabin', Sans-Serif), CodePro: ('Code Source Pro', monospace), TypeWriter: ('Special Elite', serif), Clean: ('Raleway', Sans-Serif), Thin: ('Roboto', Sans-Serif ));
+$fonts: (
+  Comfort: ('Comfortaa', cursive),
+  Cabin: ('Cabin', Sans-Serif),
+  CodePro: ('Code Source Pro', monospace),
+  TypeWriter: ('Special Elite', serif),
+  Clean: ('Raleway', Sans-Serif),
+  Thin: ('Roboto', Sans-Serif)
+);
 $colors: (
-tan: #857664,
-trans30: rgba(#808080, 0.35),
-mango:#ebb861,
-sand:#d0b588,
-orange:#f28b02,
-dkorange: #945706,
-softbrown: #2c2d32,
-mutedOrange: #9a854e,
-softsand: #b3976e,
-dkgrey:#575757,
-dkgrey2:#868585,
-ltgrey:#bdbdbd,
-coral: coral,
-softred: #b0493a,
-offWhite: #d9d4c5,
-ivr:#e6d8cc,
-wh: #fff,
-mustard: #a38853,
-trim: #f5facf,
-txtShadow: #f1e8ce,
-softwhite: #cdcdcd,
-ltblue:#3f71f1,
-navy: navy,
-mutedBlue:#3f6a96,
-softblue:#436475,
-mutedPurp: #827a90,
-dkblue:#18223b,
-ltgreen:#79e286,
-pastOlive: #2b503b,
-pastBlue: #58708a,
-transGreen: rgba(#32b384, 0.78),
-transPastGreen: rgba(#a6b696, 0.66),
-pastgreen: #a6b696,
-pastred: #c29d9d,
-pastpink: #9e869b,
-
-dkred:#441f1d,
-dkred2:#612c2a,
-dkred3:#963532,
-reddrk: #410211,
-ltred:#eb473d,
-shadow: rgba(#000, 0.8),
-dkbg: rgba(#2d2c2c, 0.7),
-dkbg2: rgba(#2f090f, 0.45),
-dkbg3: rgba(#1e2337, 0.6),
-ltbg: rgba(#c7be84, 0.5),
-ltbg2: rgba(#a0b6b8, 0.6),
-ltbg3: rgba(#f2e1a5, 0.5),
-ltghost: rgba(161, 172, 166, 0.5),
-dkghost: rgba(52, 54, 53, 0.6),
-y: yellow,
-black: black,
-paleY: #e8e598,
-pastY: #bfbc64,
-purp: purple,
-fuch: fuchsia);
+  trans30: rgba(#808080, 0.35),
+  mango:#ebb861,
+  sand:#d0b588,
+  orange:#f28b02,
+  dkorange: #945706,
+  softbrown: #2c2d32,
+  mutedOrange: #9a854e,
+  softsand: #b3976e,
+  dkgrey:#575757,
+  dkgrey2:#868585,
+  ltgrey:#bdbdbd,
+  coral: coral,
+  softred: #b0493a,
+  offWhite: #d9d4c5,
+  ivr:#e6d8cc,
+  wh: #fff,
+  mustard: #a38853,
+  trim: #f5facf,
+  txtShadow: #f1e8ce,
+  softwhite: #cdcdcd,
+  ltblue:#3f71f1,
+  navy: navy,
+  mutedBlue:#3f6a96,
+  softblue:#436475,
+  mutedPurp: #827a90,
+  dkblue:#18223b,
+  ltgreen:#79e286,
+  pastOlive: #2b503b,
+  pastBlue: #58708a,
+  transGreen: rgba(#32b384, 0.78),
+  transPastGreen: rgba(#a6b696, 0.66),
+  pastgreen: #a6b696,
+  pastred: #c29d9d,
+  pastpink: #9e869b,
+  dkred:#441f1d,
+  dkred2:#612c2a,
+  dkred3:#963532,
+  reddrk: #410211,
+  ltred:#eb473d,
+  shadow: rgba(#000, 0.8),
+  dkbg: rgba(#2d2c2c, 0.7),
+  dkbg2: rgba(#2f090f, 0.45),
+  dkbg3: rgba(#1e2337, 0.6),
+  ltbg: rgba(#c7be84, 0.5),
+  ltbg2: rgba(#a0b6b8, 0.6),
+  ltbg3: rgba(#f2e1a5, 0.5),
+  ltghost: rgba(161, 172, 166, 0.5),
+  dkghost: rgba(52, 54, 53, 0.6),
+  y: yellow,
+  black: black,
+  paleY: #e8e598,
+  pastY: #bfbc64,
+  purp: purple,
+  fuch: fuchsia
+);
 
 @import 'scss/general/general';
 @import 'scss/jq/jquery';
