--- a/master.css
+++ b/master.css
@@ -18,9 +18,6 @@ sass --watch master.scss:master.css
 li {
   list-style: none; }
 
-ul.condensed-list li {
-  list-style: lower-latin; }
-
 body {
   padding: 1vw;
   font-family: "Code Source Pro", monospace;
@@ -30,7 +27,7 @@ body {
 
 div.bg-image:before {
   content: "";
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 0;
   z-index: -1;
@@ -342,24 +339,12 @@ a[ui-sref]:hover {
   font-family: Trebuchet, Sans-Serif;
   font-size: 1.4vw; }
 
-.simple-frame4 {
-  border: 1px solid #acaecd;
-  box-shadow: 1px 1px 4px 1px rgba(45, 44, 44, 0.7);
-  background-color: #857664;
-  color: #f5facf;
-  font-family: Trebuchet, sans-serif;
-  font-weight: 400;
-  padding: 1vh 2vw;
-  font-weight: 400;
-  font-family: Trebuchet, Sans-Serif;
-  font-size: 1.4vw; }
-
 .simple-wine-frame {
   padding: 1% 2%;
   border: 1px solid grey;
   background-color: rgba(47, 9, 15, 0.45); }
 
-.forest-red-fr {
+.framed1 {
   padding: 2%;
   font-size: 1.4vw;
   margin: auto;
@@ -367,12 +352,6 @@ a[ui-sref]:hover {
   border: 1px solid brown;
   box-shadow: inset 2px 2px 10px 2px black;
   color: #bdbdbd; }
-
-.burgundy-grey-fr {
-  background: #371a1a;
-  padding: 1%;
-  border: 1px solid #575757;
-  color: #cdcdcd; }
 
 .framed2 {
   padding: 2%;
@@ -391,8 +370,9 @@ pre {
   background-color: rgba(50, 179, 132, 0.78);
   padding: 2vh 2vw; }
 
-.slate-skyblue-fr {
+.framed4 {
   padding: 2%;
+  margin: 1%;
   background-color: #37474e;
   color: #ed996f;
   padding: auto, 10%;
@@ -571,7 +551,6 @@ img.neighbors-item {
   padding: 1%;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.7) 0%, rgba(125, 185, 232, 0) 100%);
   border: 1px solid rgba(52, 54, 53, 0.6);
-  width: 57vw;
   border-right: 0px solid transparent;
   border-bottom: 0px solid transparent;
   box-shadow: inset 10px 7px 6px -2px black; }
@@ -593,9 +572,6 @@ img.neighbors-item {
 
 .thin {
   font-family: "Roboto", Sans-Serif; }
-
-a img.img-link {
-  vertical-align: bottom; }
 
 /* jquery styles */
 .jq-entry {
