--- a/scss/ecma/ecma.scss
+++ b/scss/ecma/ecma.scss
@@ -9,7 +9,7 @@ div.ecma-entry {
     background-color: #445e5e;
     padding: 2vh 2vw;
     border: 1px solid burlywood;
-    font-size: .6em;
+    // font-size: .8em;
   }
   & .thin {
     font-family: map-get($fonts, Thin);
@@ -45,7 +45,7 @@ pre.code-sample {
   }
   #condensed-list {
     li {
-      margin: .5vh auto;
+      margin: 0.5vh auto;
       list-style-type: lower-latin;
     }
   }
