react entry and cleanup

--- a/master.css
+++ b/master.css
@@ -646,7 +646,7 @@ div.react-entry {
   border: 1px solid #e6d8cc; }
   div.react-entry .chtitle {
     font-family: "Roboto", Sans-Serif;
-    color: #945706; }
+    color: #441f1d; }
 
 .react-frame-light {
   padding: 2%;
