--- a/master.scss
+++ b/master.scss
@@ -64,7 +64,7 @@ $colors: (
   dkbg3: rgba(#1e2337, 0.6),
   ltbg: rgba(#c7be84, 0.5),
   ltbg2: rgba(#a0b6b8, 0.6),
-  ltbg3: rgba(#f2e1a5, 0.5),
+  ltbg3: rgba(#dbc1a8, 0.5),
   ltghost: rgba(161, 172, 166, 0.5),
   dkghost: rgba(52, 54, 53, 0.6),
   y: yellow,
